--- a/componets/Hero/hero.module.css
+++ b/componets/Hero/hero.module.css
@@ -2,8 +2,8 @@
   text-align: center;
   background-image: linear-gradient(
     to bottom,
-    var(--color-grey-900),
-    var(--color-grey-800)
+    var(--color-blue-900),
+    var(--color-blue-800)
   );
   padding: var(--size-8) 0;
 }
@@ -14,7 +14,7 @@
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
   border-radius: 50%;
   overflow: hidden;
-  background-color: var(--color-grey-700);
+  background-color: var(--color-blue-700);
   margin: auto;
 }
 
@@ -28,12 +28,12 @@
 .hero h1 {
   font-size: var(--size-16);
   margin: var(--size-4) 0;
-  color: var(--color-grey-300);
+  color: var(--color-blue-100);
 }
 
 .hero p {
   font-size: var(--size-6);
-  color: var(--color-grey-200);
+  color: var(--color-blue-100);
   width: 90%;
   max-width: 40rem;
   margin: auto;
