--- a/componets/FeaturedPosts/featuredposts.module.css
+++ b/componets/FeaturedPosts/featuredposts.module.css
@@ -6,7 +6,7 @@
 
 .latest h2 {
   font-size: var(--size-8);
-  color: var(--color-grey-800);
+  color: var(--color-blue-900);
   text-align: center;
 }
 
