--- a/componets/Posts/AllPosts/allposts.module.css
+++ b/componets/Posts/AllPosts/allposts.module.css
@@ -6,7 +6,7 @@
 
 .posts h1 {
   font-size: var(--size-8);
-  color: var(--color-grey-800);
+  color: var(--color-blue-800);
   text-align: center;
 }
 
