--- a/componets/Posts/PostItem/postitem.module.css
+++ b/componets/Posts/PostItem/postitem.module.css
@@ -1,11 +1,11 @@
 .post {
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  background-color: var(--color-grey-800);
+  background-color: var(--color-blue-800);
   text-align: center;
 }
 
 .post a {
-  color: var(--color-grey-100);
+  color: var(--color-blue-100);
 }
 
 .image {
@@ -29,7 +29,7 @@
 
 .content time {
   font-style: italic;
-  color: var(--color-grey-300);
+  color: var(--color-blue-100);
 }
 
 .content p {
