--- a/componets/Contact/ContactFrom/contactform.module.css
+++ b/componets/Contact/ContactFrom/contactform.module.css
@@ -28,8 +28,8 @@
   padding: var(--size-1);
   border-radius: 4px;
   width: 100%;
-  border: 1px solid var(--color-grey-400);
-  background-color: var(--color-grey-50);
+  border: 1px solid var(--color-blue-400);
+  background-color: var(--color-blue-100);
   resize: none;
 }
 
@@ -56,7 +56,7 @@
   border: 1px solid var(--color-primary-700);
   padding: var(--size-2) var(--size-4);
   border-radius: 4px;
-  color: var(--color-primary-50);
+  color: var(--color-grey-50);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
 
