fixing passing props

--- a/componets/Ui/Notification/notification.module.css
+++ b/componets/Ui/Notification/notification.module.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: var(--color-grey-100);
-  background-color: var(--color-grey-800);
+  color: var(--color-grey-50);
+  background-color: var(--color-blue-800);
   padding: 0 var(--size-8);
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
   position: fixed;
@@ -26,7 +26,7 @@
 
 .success {
   background-color: var(--color-success-500);
-  color: var(--color-grey-800);
+  color: var(--color-blue-800);
 }
 
 .error {
